# brave-orders

./: .gitignore  .pylintrc  README.md  manage.py  pyproject.toml
brave_orders/: apps.py  models.py  pagination.py  serializers.py  tests.py  urls.py  viewsets.py
brave_orders/fixtures/: initial_data.yaml
brave_orders/migrations/: 0001_initial.py  0002_seller_alter_customer_address_and_more.py
project/: settings.py  urls.py
